style: fix spacing on pokedex navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ input:checked ~ label .fa-sun {
 }
 
 .pokedex-navigation {
-  padding-inline: 15px;
+  margin-inline: 25px;
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 100px;
